Update product hover

--- a/assets/styles/rest.css
+++ b/assets/styles/rest.css
@@ -76,3 +76,8 @@ footer {
     color: red;
     cursor: pointer;
 }
+
+.product-item:hover {
+    transform: scale(1.1);
+    transition: all 0.4s ease-out;
+}
