--- a/assets/styles/rest.css
+++ b/assets/styles/rest.css
@@ -81,3 +81,8 @@ footer {
     transform: scale(1.1);
     transition: all 0.4s ease-out;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
